--- a/_posts/2020-01-17-Algorithm-1.md
+++ b/_posts/2020-01-17-Algorithm-1.md
@@ -3,6 +3,11 @@ layout: post
 title: 2차원 리스트를 1차원 리스트로 만들기
 date: 2021-01-17 +0900
 categories: [Algorithm, Python]
+sitemap:
+  changefreq: daily
+  priority: 1.0
+---
+
 ---
 
 ---
