--- a/_posts/2021-01-16-Git-1.md
+++ b/_posts/2021-01-16-Git-1.md
@@ -3,6 +3,11 @@ layout: post
 title: Git 명령어 정리(필요할 때마다 추가)
 date: 2021-01-16 +0900
 categories: Git
+sitemap:
+  changefreq: daily
+  priority: 1.0
+---
+
 ---
 
 ---
