--- a/_posts/2021-01-16-Git-1.md
+++ b/_posts/2021-01-16-Git-1.md
@@ -100,6 +100,10 @@ sitemap:
 
 -> 로컬 저장소와 원격 저장소를 연결한 뒤 origin이라는 별칭 부여
 
+### `git remote -v`
+
+-> 원격 저장소 확인
+
 ### `git push`
 
 -> 원격 저장소에 로컬 저장소의 최신 commit들을 push(업로드) 후 commit 생성
