modify posting algorithm-3

--- a/_posts/2021-01-31-Algorithm-3.md
+++ b/_posts/2021-01-31-Algorithm-3.md
@@ -163,7 +163,7 @@ while True:
 
 생각해보면 이 방법은 `food_times`에 섭취 시간이 1씩 증가하는 경우 최악이다.
 
-에를 들어 효율성 테스트 제한 사항에 따라 [1, 2, 3, 4, 5, ... , 200000]만 되도 `iter_cnt`는 계속해서 1로 밖에 초기화되지 않기 때문에(최초에 1이고, 모든 원소에서 1씩 빼기 때문에 다시 최소값이 1이 됨) 총 200000 * 200000 = 4*10^10 = 400억 번의 반복을 해야 한다.
+에를 들어 효율성 테스트 제한 사항에 따라 [1, 2, 3, 4, 5, ... , 200000]만 되도 `iter_cnt`는 계속해서 1로 밖에 초기화되지 않기 때문에(최초에 1이고, 모든 원소에서 1씩 빼기 때문에 다시 최소값이 1이 됨) 총 200000 +199999 + 199998 + ... + 1 = 20000100000 = 약 200억 번의 반복을 해야 한다.
 
 위의 방법에서 현재 가장 필요 없는 부분은 가장 적은 섭취 시간을 찾기 위해 정렬하는 부분이다. 이는 혹시나 n(`k // len(food_times_dic)`)보다 섭취 시간이 더 적은 경우 음수가 발생하기 때문에 해놓은 장치같은 건데, 이를 없애고 차라리 발생한 음수 시간만큼 다시 중단된 시간이면서 음식을 넘겨야 하는 `k`에 더해주는 방식을 떠올렸다.
 
@@ -190,6 +190,8 @@ while True:
 
 ```python
 def solution(food_times, k):
+    if sum(food_times) <= k:
+        return -1
     answer = 0
     food_times_dic = {}
     for i, v in enumerate(food_times):
@@ -202,8 +204,6 @@ def solution(food_times, k):
                 if temp <= 0:
                     k -= iter_cnt + temp
                     del food_times_dic[key]
-                    if food_times_dic == {}:
-                        return -1
                 else:
                     k -= iter_cnt
                     food_times_dic[key] = temp
@@ -216,3 +216,11 @@ def solution(food_times, k):
 <img src="{{'/public/img/algorithm-3-2.png'}}">
 
 전체 코드 - [on1ystar/algorithm-problem-solving-codes](https://github.com/on1ystar/algorithm-problem-solving-codes/blob/master/greedy/%EB%AC%B4%EC%A7%80%EC%9D%98%20%EB%A8%B9%EB%B0%A9%20%EB%9D%BC%EC%9D%B4%EB%B8%8C.py)
+
++추가
+
+첫 번째 방법에서 `iter_cnt`를 계속 초기화 하지 말고 누적시켜 빼는 방법을 사용하면 가능할 것 같음. 가장 섭취 시간이 적은 음식을 `pop()`시키고, 그 시간만큼 `iter_cnt`에 누적한 뒤 다른 원소는 순회하지 않고 다음에 누적된 `iter_cnt`를 빼면 순회한 효과를 줄 수 있기 때문에 내부의 `while`문 하나를 없앨 수 있다.
+
+따라서 처음에 `k // len(food_times_dic)`도 필요없이 오로지 정렬한 값을 가지고 푸는 방법.
+
+이렇게 하면 우선순위 큐를 사용하는 것과 비슷
