--- a/_posts/2021-02-07-Algorithm-4.md
+++ b/_posts/2021-02-07-Algorithm-4.md
@@ -60,7 +60,7 @@ for _ in range(M):
     street_map[A].append(B)
 ```
 
-`street_map`은 도시와 거리 정보를 인접 리스트 형태로 구현한 2차원 리스트다. 그래프를 인접 행렬로 구현할 경우 도시 개수가 최대 300,000개 이기 때문에 그의 제곱인 90,000,000,000 = 900억 개의 원소를 표현해야 한다.
+`street_map`은 도시와 거리 정보를 인접 리스트 형태로 구현한 2차원 리스트다. 그래프를 인접 행렬로 구현할 경우 도시 개수가 최대 300,000개 이기 때문에 그의 제곱인 90,000,000,000 = 900억 개의 원소를 표현해야 한다. 이미 메모리 초과.
 
 ```python
 found_cities = [-1] * (N + 1)
