--- a/_posts/Node/2021-02-04-Node-2.md
+++ b/_posts/Node/2021-02-04-Node-2.md
@@ -21,7 +21,7 @@ sitemap:
 - `node -v`
 - `npm -v`
 
-<img src="{{'/public/img/node-2-1.png'}}">
+<img src="{{'/public/img/node/node-2-1.png'}}">
 
 ### 2. 간단하게 index.js 파일을 만든 뒤, 노드로 실행해 보기
 
@@ -32,7 +32,7 @@ console.log("hello");
 
 - `node index.js`
 
-<img src="{{'/public/img/node-2-2.png'}}">
+<img src="{{'/public/img/node/node-2-2.png'}}">
 
 ### 3. `npm` 프로젝트 시작하기
 
@@ -46,7 +46,7 @@ node.js에서 사용하는 모듈들을 패키지로 만들어 npm을 통해 관
 
 - `npm init`
 
-<img src="{{'/public/img/node-2-3.png'}}">
+<img src="{{'/public/img/node/node-2-3.png'}}">
 
 여러 정보들을 입력하면 `package.json`이라는 파일이 생성되는데, `name`과 `version`은 필수로 입력되어야 한다.
 
@@ -70,7 +70,7 @@ node.js에서 사용하는 모듈들을 패키지로 만들어 npm을 통해 관
 
 - `npm install Express`
 
-<img src="{{'/public/img/node-2-4.png'}}">
+<img src="{{'/public/img/node/node-2-4.png'}}">
 
 node_modules라는 폴더가 설치되며, pakage.json에 다음과 같은 코드가 추가된다.
 
@@ -104,7 +104,7 @@ app.listen(PORT, handleListening);
 
 위 명령어를 실행하면 [http://localhost:4000](http://localhost:4000으로) 으로 접속이 가능하다. 단, 아직 `routing`을 해주지 않았기 때문에 아래와 같은 에러가 발생한다.
 
-<img src="{{'/public/img/node-2-5.png'}}">
+<img src="{{'/public/img/node/node-2-5.png'}}">
 
 여기서 `node init` 이라고 서버를 시작하는 것 보다는 Exprexx 프로젝트를 npm으로 관리할 것이기 때문에 `npm` 명령어를 이용하는 편이 추후에 가독성이 더 좋다. 그러기 위해서는 package.json의 `"script"` 를 수정해 주면 된다. `"script"`는 간단히 말해서 json 형태로 `npm`의 커맨드 라인 명령어들을 지정하는 곳이라고 보면 된다.
 
@@ -134,7 +134,7 @@ app.get("/", handleHome);
 
 예를 들어 `handleHone`은 `/`경로로 접속하면 html에 `send` 메소드로 "Welcome to my home" 이라는 문자열을 출력한다.
 
-<img src="{{'/public/img/node-2-6.png'}}">
+<img src="{{'/public/img/node/node-2-6.png'}}">
 
 ### 6. babel 설치
 
