--- a/_posts/Algorithm/2021-02-07-Algorithm-4.md
+++ b/_posts/Algorithm/2021-02-07-Algorithm-4.md
@@ -86,5 +86,31 @@ while queue:
 처음에 이런 정보를 활용하지 못해 따로 거리들을 기록하면서 딕셔너리를 만들어 줬는데, 이러니까 메모리 초과가 많이 났다.
 
 <img src="{{'/public/img/algorithm/algorithm-4-1.png'}}">
+<br>
+++ 추천하는 추가 케이스
+
+```python
+# 5가 나오는 지 확인할 수 있음
+5 5 2 1
+1 2
+1 4
+2 3
+3 5
+4 5
+
+# 1이 나오는 지 확인할 수 있음
+4 4 3 1
+1 2
+1 3
+2 3
+2 4
+4 1
+
+# 무한 루프 확인
+3 3 4 1
+1 2
+2 3
+3 1
+```
 
 전체 소스 코드 → [https://github.com/on1ystar/algorithm-problem-solving-codes/blob/master/DFS%26BFS/특정 거리의 도시 찾기.py](https://github.com/on1ystar/algorithm-problem-solving-codes/blob/master/DFS%26BFS/%ED%8A%B9%EC%A0%95%20%EA%B1%B0%EB%A6%AC%EC%9D%98%20%EB%8F%84%EC%8B%9C%20%EC%B0%BE%EA%B8%B0.py)
