--- a/_posts/Algorithm/2021-02-07-Algorithm-4.md
+++ b/_posts/Algorithm/2021-02-07-Algorithm-4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: <백준 18352번> 특정 거리의 도시 찾기
+title: <백준 18352번-python> 특정 거리의 도시 찾기
 date: 2021-02-07 +0900
 categories: [Algorithm]
 sitemap:
