--- a/_posts/Algorithm/2021-01-21-Algirithm-1.md
+++ b/_posts/Algorithm/2021-01-21-Algirithm-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: <프로그래머스 level 1> 크레인 인형뽑기 게임
+title: <프로그래머스 level 1-python> 크레인 인형뽑기 게임
 date: 2021-01-21 +0900
 categories: [Algorithm]
 sitemap:
