--- a/_posts/Algorithm/2021-01-31-Algorithm-3.md
+++ b/_posts/Algorithm/2021-01-31-Algorithm-3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: <2019 KAKAO BLIND RECRUITMENT> 무지의 먹방 라이브
+title: <2019 KAKAO BLIND RECRUITMENT-python> 무지의 먹방 라이브
 date: 2021-01-30 +0900
 categories: [Algorithm]
 sitemap:
