--- a/_posts/HTML5&CSS/2021-02-08-HTML&CSS-1.md
+++ b/_posts/HTML5&CSS/2021-02-08-HTML&CSS-1.md
@@ -2,7 +2,7 @@
 layout: post
 title: HTML5/CSS3 transition/@keyframes/animation
 date: 2021-02-08 +0900
-categories: JavaScript
+categories: HTML5/CSS3
 sitemap:
   changefreq: daily
   priority: 1.0
