--- a/_posts/Git/2021-01-16-Git-1.md
+++ b/_posts/Git/2021-01-16-Git-1.md
@@ -11,13 +11,13 @@ sitemap:
 ---
 
 <br>
-```
-기본적으로 windows에서도 linux 명령어를 사용할 수 있는 git bash를 사용
-```
+
+> _windows에서도 linux 명령어를 사용할 수 있는 git bash 기준_
 
 ### `git init`
 
--> 현재 디렉토리에서 버전 관리 시작 → .git 디렉토리 생성
+<div style="text-align: center;">-> 현재 디렉토리에서 버전 관리 시작 → .git 디렉토리 생성
+</div>
 
 ### `git config --global user.name <관리자 이름>`
 
