--- a/_posts/SQL/2021-02-24-SQL-1.md
+++ b/_posts/SQL/2021-02-24-SQL-1.md
@@ -10,6 +10,10 @@ sitemap:
 
 ---
 
+_사진으로 첨부한 테스트 데이터는 모두 아래 링크에서 실습_
+
+> https://www.w3schools.com/sql/trysql.asp?filename=trysql_select_all
+
 <br>
 
 <div class="text-to-center" style="margin: 36px 0"><h2>🔷 전체 구문 🔷</h2></div>
@@ -26,11 +30,15 @@ sitemap:
 
 → `SELECT` 컬럼명1, 컬럼명2, ... `FROM` 테이블명1, 테이블명2, ...
 
+<br>
+
 <div class="text-to-center" style="margin: 36px 0"><h2>🔷 전체 컬럼 조회 🔷</h2></div>
 
 ```sql
 SELECT * FROM [테이블명]
 ```
+
+<br>
 
 <div class="text-to-center" style="margin: 36px 0"><h2>🔷 특정 컬럼 조회 🔷</h2></div>
 
@@ -53,6 +61,8 @@ SELECT A AS AA, B, C FROM [테이블명]
 ```sql
 SELECT [ALL | DISTINCT] 컬럼명 FROM 테이블명
 ```
+
+<br>
 
 <div class="text-to-center" style="margin: 36px 0"><h2>🔷 WHERE 🔷</h2></div>
 
@@ -119,6 +129,8 @@ SELECT * FROM 테이블 WHERE 이름 LIKE '_A'
 SELECT * FROM 테이블 WHERE 이름 LIKE '___'
 ```
 
+<br>
+
 <div class="text-to-center" style="margin: 36px 0"><h2>🔷 ORDER BY 🔷</h2></div>
 
 🔹 조회한 레코드들을 지정한 컬럼들을 기준으로 정렬
@@ -141,6 +153,8 @@ SELECT * FROM Customers ORDER BY Country ASC, PostalCode DESC
 <img src="{{'/public/img/sql/sql-1-1.png'}}">
 
 [https://www.w3schools.com/sql/trysql.asp?filename=trysql_select_all](https://www.w3schools.com/sql/trysql.asp?filename=trysql_select_all)
+
+<br>
 
 <div class="text-to-center" style="margin: 36px 0"><h2>🔷 그룹 함수 🔷</h2></div>
 
@@ -180,6 +194,8 @@ SELECT SUM(Price) AS price_sum, AVG(Price) AS price_avg FROM Products
 >> price_sum|price_avg
 >> 2222.71|28.866363636363637
 ```
+
+<br>
 
 <div class="text-to-center" style="margin: 36px 0"><h2>🔷 GROUP BY 🔷</h2></div>
 
@@ -230,6 +246,8 @@ SELECT Country, COUNT(*), COUNT(DISTINCT City) FROM Customers GROUP BY Country
 
 <img src="{{'/public/img/sql/sql-1-6.png'}}">
 
+<br>
+
 <div class="text-to-center" style="margin: 36px 0"><h2>🔷 HAVING 🔷</h2></div>
 
 🔹 `GROUP BY` 절에 의해 생성된 결과 값 중 원하는 조건에 부합하는 레코드만
@@ -248,6 +266,8 @@ HAVING AVG(Price) >= 20
 ```
 
 <img src="{{'/public/img/sql/sql-1-7.png'}}">
+
+<br>
 
 <div class="text-to-center" style="margin: 36px 0"><h2>🔷 JOIN🔷</h2></div>
 
