--- a/_posts/SQL/2021-02-24-SQL-1.md
+++ b/_posts/SQL/2021-02-24-SQL-1.md
@@ -154,6 +154,24 @@ SELECT * FROM Customers ORDER BY Country ASC, PostalCode DESC
 
 [https://www.w3schools.com/sql/trysql.asp?filename=trysql_select_all](https://www.w3schools.com/sql/trysql.asp?filename=trysql_select_all)
 
+🔹 `LIMIT [시작 위치], 개수` : 조회할 레코드 수를 제한. `시작 위치`는 index 0부터 시작
+
+```sql
+/* CustomerID가 1부터 n까지 있을 때*/
+
+/* 상위 3개만 출력*/
+SELECT CustomerID FROM Customers ORDER BY CustomerID LIMIT 3
+> 1
+> 2
+> 3
+
+/* 상위 3번째 레코드부터 3개만 출력*/
+SELECT CustomerID FROM Customers ORDER BY CustomerID LIMIT 1,3
+> 2
+> 3
+> 4
+```
+
 <br>
 
 <div class="text-to-center" style="margin: 36px 0"><h2>🔷 그룹 함수 🔷</h2></div>
