update SQL-1 / add IFNULL,NVL,COALESCE

--- a/_posts/SQL/2021-02-24-SQL-1.md
+++ b/_posts/SQL/2021-02-24-SQL-1.md
@@ -42,21 +42,21 @@ SELECT * FROM [테이블명]
 
 <div class="text-to-center" style="margin: 36px 0"><h2>🔷 특정 컬럼 조회 🔷</h2></div>
 
-🔷 컬럼은 1개만 조회할 수도 있고, 여러 개를 조회할 수 있음
+🔹 컬럼은 1개만 조회할 수도 있고, 여러 개를 조회할 수 있음
 
 ```sql
 SELECT 컬럼명 FROM [테이블명]
 SELECT 컬럼명, 컬럼명, ... FROM [테이블명]
 ```
 
-🔷 `AS`: 컬럼에 별칭 부여
+🔹 `AS`: 컬럼에 별칭 부여
 
 ```sql
 SELECT A AS AA, B, C FROM [테이블명]
 # A,B,C 컬럼을 조회하면서 A 컬럼에 AA라는 별칭 부여
 ```
 
-🔷 `ALL`: 테이블에 동일한 데이터 행이 있는 경우에도 모든 데이터를 반환(default) | `DISTINCT`: 테이블에 동일한 데이터 행이있는 경우 중복을 제거한 1 개만 조회
+🔹 `ALL`: 테이블에 동일한 데이터 행이 있는 경우에도 모든 데이터를 반환(default) | `DISTINCT`: 테이블에 동일한 데이터 행이있는 경우 중복을 제거한 1 개만 조회
 
 ```sql
 SELECT [ALL | DISTINCT] 컬럼명 FROM 테이블명
@@ -170,6 +170,55 @@ SELECT CustomerID FROM Customers ORDER BY CustomerID LIMIT 1,3
 > 2
 > 3
 > 4
+```
+
+<br>
+
+<div class="text-to-center" style="margin: 36px 0"><h2>🔷 날짜 및 시간 함수 🔷</h2></div>
+
+🔹 `YEAR` : 연도 추출
+
+🔹 `MONTH` : 월 추출
+
+🔹 `DAY` : 일 추출
+
+🔹 `HOUR` : 시 추출
+
+🔹 `MINUTE` : 분 추출
+
+🔹 `SECOND` : 초 추출
+
+```sql
+/* https://programmers.co.kr/learn/courses/30/lessons/59412 */
+SELECT DATETIME, YEAR(DATETIME), MONTH(DATETIME), DAY(DATETIME), HOUR(DATETIME), MINUTE(DATETIME)
+FROM ANIMAL_OUTS
+```
+
+<img src="{{'public/img/sql/sql-1-8.png'}}">
+
+출처: [프로그래머스-SQL 고득점 Kit](https://programmers.co.kr/learn/courses/30/lessons/59412)
+
+<br>
+
+<div class="text-to-center" style="margin: 36px 0"><h2>🔷 변환(치환) 함수 🔷</h2></div>
+
+🔹 NULL을 0 또는 다른 값으로 변환하기 위해서 사용하는 함수
+
+🔹 `IFNULL(컬럼,'변환할 값')`: mysql에서 사용
+
+🔹 `NVL(컬럼, '변환할 값')`: oracle에서 사용
+
+🔹 `COALESCE(컬럼,'변환할 값')`: 모두 사용 가능
+
+🔹 문제 참고: [프로그래머스 NULL 처리하기](https://programmers.co.kr/learn/courses/30/lessons/59410)
+
+```sql
+/* mysql 기준 같은 결과 값을 나타냄*/
+SELECT ANIMAL_TYPE, COALESCE(NAME, "No name"), SEX_UPON_INTAKE FROM ANIMAL_INS
+ORDER BY ANIMAL_ID
+
+SELECT ANIMAL_TYPE, IFNULL(NAME, "No name"), SEX_UPON_INTAKE FROM ANIMAL_INS
+ORDER BY ANIMAL_ID
 ```
 
 <br>
