update SQL-1 / add CASE

--- a/_posts/SQL/2021-02-24-SQL-1.md
+++ b/_posts/SQL/2021-02-24-SQL-1.md
@@ -200,7 +200,7 @@ FROM ANIMAL_OUTS
 
 <br>
 
-<div class="text-to-center" style="margin: 36px 0"><h2>🔷 변환(치환) 함수 🔷</h2></div>
+<div class="text-to-center" style="margin: 36px 0"><h2>🔷 NULL 변환(치환) 함수 🔷</h2></div>
 
 🔹 NULL을 0 또는 다른 값으로 변환하기 위해서 사용하는 함수
 
@@ -218,6 +218,42 @@ SELECT ANIMAL_TYPE, COALESCE(NAME, "No name"), SEX_UPON_INTAKE FROM ANIMAL_INS
 ORDER BY ANIMAL_ID
 
 SELECT ANIMAL_TYPE, IFNULL(NAME, "No name"), SEX_UPON_INTAKE FROM ANIMAL_INS
+ORDER BY ANIMAL_ID
+```
+
+<br>
+
+<div class="text-to-center" style="margin: 36px 0"><h2>🔷 CASE 함수 🔷</h2></div>
+
+```sql
+CASE
+	WHEN 조건 THEN 반환 값
+	WHEN 조건 THEN 반환 값
+	ELSE 반환 값
+END
+```
+
+🔹 중첩 `IF ELSE`와 유사한 구조
+
+🔹 `WHEN`과 `THEN`은 한 쌍
+
+🔹 `ELSE`가 존재하지 않고, 조건에 맞지 않아서 반환 값이 없으면 `NULL`를 반환
+
+🔹 문제 참고: [프로그래머스-중성화 여부 파악하기](https://programmers.co.kr/learn/courses/30/lessons/59409)
+
+```sql
+/*보호소의 동물이 중성화되었는지 아닌지 파악하려 합니다.
+중성화된 동물은 SEX_UPON_INTAKE 컬럼에 'Neutered' 또는 'Spayed'라는 단어가 들어있습니다.
+동물의 아이디와 이름, 중성화 여부를 아이디 순으로 조회하는 SQL문을 작성해주세요.
+이때 중성화가 되어있다면 'O', 아니라면 'X'라고 표시해주세요.*/
+
+SELECT ANIMAL_ID, NAME,
+    CASE
+        WHEN SEX_UPON_INTAKE LIKE "%Neutered%" THEN 'O'
+        WHEN SEX_UPON_INTAKE LIKE "%Spayed%" THEN 'O'
+        ELSE 'X'
+    END AS "중성화"
+FROM ANIMAL_INS
 ORDER BY ANIMAL_ID
 ```
 
