--- a/_posts/SQL/2021-02-24-SQL-1.md
+++ b/_posts/SQL/2021-02-24-SQL-1.md
@@ -188,15 +188,16 @@ SELECT CustomerID FROM Customers ORDER BY CustomerID LIMIT 1,3
 
 🔹 `SECOND` : 초 추출
 
+문제 출처: [프로그래머스-SQL 고득점 Kit](https://programmers.co.kr/learn/courses/30/lessons/59412)
+
 ```sql
-/* https://programmers.co.kr/learn/courses/30/lessons/59412 */
-SELECT DATETIME, YEAR(DATETIME), MONTH(DATETIME), DAY(DATETIME), HOUR(DATETIME), MINUTE(DATETIME)
+
+SELECT DISTINCT HOUR(DATETIME) AS HOUR, COUNT(*)
 FROM ANIMAL_OUTS
+WHERE HOUR(DATETIME) BETWEEN 9 AND 19
+GROUP BY HOUR
+ORDER BY HOUR
 ```
-
-<img src="{{'public/img/sql/sql-1-8.png'}}">
-
-출처: [프로그래머스-SQL 고득점 Kit](https://programmers.co.kr/learn/courses/30/lessons/59412)
 
 <br>
 
