update sql-1 / add join

--- a/_posts/SQL/2021-02-24-SQL-1.md
+++ b/_posts/SQL/2021-02-24-SQL-1.md
@@ -373,11 +373,80 @@ HAVING AVG(Price) >= 20
 
 <br>
 
-<div class="text-to-center" style="margin: 36px 0"><h2>🔷 JOIN🔷</h2></div>
+<div class="text-to-center" style="margin: 36px 0"><h2>🔷 JOIN 🔷</h2></div>
+
+🔹 두 개 이상의 테이블이나 데이터베이스를 연결하여 데이터를 검색
+
+🔹 보통 Primary key혹은 Foreign key로 두 테이블을 연결
+
+> 공부 자료: [생활 코딩](https://opentutorials.org/course/3884/) / 실습 자료: [sql join 연습장](https://docs.google.com/spreadsheets/d/1OUHAnTPdx0ga8P1_HBm6WUuWs02tvV-31mgi__XmRbc/edit#gid=1849152573) / JOIN 벤 다이어그램: [https://sql-joins.leopard.in.ua/](https://sql-joins.leopard.in.ua/)
+
+<img src="{{'/public/img/sql/sql-1-9.png'}}">
+
+🔹 `INNER JOIN`: JOIN 하는 모든 테이블에 존재하는 레코드만 JOIN
+
+<img src="{{'/public/img/sql/sql-1-10.png'}}">
+
+```sql
+/* *로 조회했기 때문에 모든 컬럼이 표시
+topic 테이블 마지막 레코드 author_id 값이 NULL이며,
+author 테이블의 마지막 레코드인 aid 3은 topic이 참조하지 않고 있으므로,
+각 레코드는 제외된다. */
+SELECT * FROM topic
+INNER JOIN author ON topic.author_id = author.aid
+```
+
+<img src="{{'/public/img/sql/sql-1-11.png'}}">
+
+🔹 `LEFT JOIN`: 왼쪽 테이블의 모든 레코드를 기준으로 JOIN, 없는 레코드는 NULL로 표시
+
+<img src="{{'/public/img/sql/sql-1-12.png'}}">
+
+```sql
+SELECT * FROM topic
+LEFT JOIN author
+ON topic.author_id = author.aid
+```
+
+<img src="{{'/public/img/sql/sql-1-13.png'}}">
+
+```sql
+/* 3개의 테이블을 LEFT JOIN
+앞의 두 테이블을 먼저 topic 테이블을 기준으로 author 테이블을 LEFT JOIN 후,
+그 결과에 profile 테이블을 LEFT JOIN */
+SELECT tid, topic.title, author_id, name, profile.title AS job_title
+FROM topic
+LEFT JOIN author ON topic.author_id = author.aid
+LEFT JOIN profile ON author.profile_id = profile.pid;
+```
+
+<img src="{{'/public/img/sql/sql-1-14.png'}}">
+
+🔹 `FULL OUTER JOIN`: `LEFT JOIN`한 후 `RIGHT JOIN`한 다음 중복되는 레코드를 삭제. 이를 지원하지 않는 SQL에서는 LEFT JOIN한 결과와 RIGHT JOIN한 결과를 `UNION`해서 사용
+
+<img src="{{'/public/img/sql/sql-1-15.png'}}">
+
+```sql
+SELECT * FROM topic
+FULL OUTER JOIN author ON topic.author_id = author.id
+```
+
+<img src="{{'/public/img/sql/sql-1-16.png'}}">
+
+🔹 `EXCLUSIVE (LEFT) JOIN`: 한 쪽 테이블에 존재하는 레코드만 조회
+
+<img src="{{'/public/img/sql/sql-1-17.png'}}">
+
+```sql
+/* topic을 기준으로 LEFT 조인 후 author가 NULL인 레코드만 조회 */
+SELECT * FROM topic
+LEFT JOIN author ON topic.author_id = author.aid
+WHERE author.aid is NULL
+```
+
+<img src="{{'/public/img/sql/sql-1-18.png'}}">
 
 <br>
-
-_+ 추가 예정_
 
 ### REFERENCE
 
@@ -389,4 +458,14 @@ _+ 추가 예정_
 
 [https://121202.tistory.com/26](https://121202.tistory.com/26)
 
+[https://extbrain.tistory.com/46](https://extbrain.tistory.com/46)
+
 [https://www.w3schools.com/sql/trysql.asp?filename=trysql_select_all](https://www.w3schools.com/sql/trysql.asp?filename=trysql_select_all)
+
+[https://programmers.co.kr/learn/challenges](https://programmers.co.kr/learn/challenges)
+
+[https://sql-joins.leopard.in.ua/](https://sql-joins.leopard.in.ua/)
+
+[https://opentutorials.org/course/3884](https://opentutorials.org/course/3884)
+
+[https://docs.google.com/spreadsheets/d/1OUHAnTPdx0ga8P1_HBm6WUuWs02tvV-31mgi\_\_XmRbc/edit#gid=1849152573](https://docs.google.com/spreadsheets/d/1OUHAnTPdx0ga8P1_HBm6WUuWs02tvV-31mgi__XmRbc/edit#gid=1849152573)
