--- a/_posts/SQL/2021-02-24-SQL-1.md
+++ b/_posts/SQL/2021-02-24-SQL-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 코딩테스트를 위한 SQL SELECT문 정리(지속적으로 업데이트)
+title: SQL 코딩 테스트를 위한 SELECT문 정리(지속적으로 업데이트)
 date: 2021-02-24 +0900
 categories: [SQL, Algorithm]
 sitemap:
