--- a/_posts/Algorithm/2021-02-16-Algorithm-8.md
+++ b/_posts/Algorithm/2021-02-16-Algorithm-8.md
@@ -72,7 +72,7 @@ N = 7인 경우에 다음과 같은 상담 일정표를 보자.
 
 ---
 
-최대한 보수가 좋은 상담을 골라 최대 이익을 얻어야 하는데, 보수와 소모되는 상담 일 수에 특별한 규칙이 없기 떄문에 모든 경우를 탐색해야 한다. 단, `N=15`로 크지 않고, 현재 선택한 상담이 이후에 선택할 상담에 영향을 미치기 뗴문에 다이나믹 프로그래밍으로 접근했다.
+최대한 보수가 좋은 상담을 골라 최대 이익을 얻어야 하는데, 보수와 소모되는 상담 일 수에 특별한 규칙이 없기 떄문에 모든 경우를 탐색해야 한다. 단, `N=15`로 크지 않고, 현재 선택한 상담이 이후에 선택할 상담에 영향을 미치기 때문에 다이나믹 프로그래밍으로 접근했다.
 
 가장 중요한 변수는 걸리는 상담 일 수 `T`다. 선택한 상담의 날짜를 포함한 `T`일 동안 다른 상담을 진행할 수 없기 때문에 각 날짜에 최대 이익을 낼 수 있는 상담들을 골라내야 한다.
 
