--- a/_posts/SQL/2021-02-24-SQL-1.md
+++ b/_posts/SQL/2021-02-24-SQL-1.md
@@ -10,6 +10,12 @@ sitemap:
 
 ---
 
+<div class="intro" >
+
+의문점이나 지적 등의 관심 및 조언을 위한 댓글이나 메일은 언제나 환영이고 감사합니다.
+
+</div>
+
 _사진으로 첨부한 테스트 데이터는 모두 아래 링크에서 실습_
 
 > https://www.w3schools.com/sql/trysql.asp?filename=trysql_select_all
