--- a/_posts/Socket Programming/2021-03-16-socket-1.md
+++ b/_posts/Socket Programming/2021-03-16-socket-1.md
@@ -10,7 +10,11 @@ sitemap:
 
 ---
 
-<br>
+<div class="intro" >
+
+의문점이나 지적 등의 관심 및 조언을 위한 댓글이나 메일은 언제나 환영이고 감사합니다.
+
+</div>
 
 <div class="text-to-center text-shadow-blue">Socket</div>
 
