--- a/_posts/Node/2021-04-20-Node-1.md
+++ b/_posts/Node/2021-04-20-Node-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Node.js 란?, 특징-이벤트 루프/논 블로킹/싱글 스레드
-date: 2021-01-24 +0900
+date: 2021-04-20 +0900
 categories: [Node.js]
 sitemap:
   changefreq: daily
@@ -9,6 +9,32 @@ sitemap:
 ---
 
 ---
+
+많은 사람들이 JavaScript를 배우고, 매력있어 하는 이유는 다양하겠지만 가장 대중적인 이유 중 하나는 JavaScript 하나로 웹 개발의 **Front-end**, **Back-end**부터 **Android**와 **IOS** 앱을 만들 수 있는 **하이브리드 앱** 개발까지 가능하기 때문이다.
+
+특히나 Front-end 영역에서 HTML과 CSS를 편리하게 제어할 수 있는, 동적인 프로그래밍이 가능한 언어는 **JavaScript가 유일**하기 때문에 개발자라면 갖춰야 할 최소한의 소양에 포함된다고 해도 무방하다.
+
+때문에 개발자의 길을 가야겠다고 마음 먹은 사람들 중 다수가 어차피 배워야 하고, 다양한 영역에서 사용할 수 있는 JavaScript를 주력 언어로 익히기 위해 노력한다.
+
+실제로 아래 링크들은 유명한 Programming language ranking 사이트들의 최신 랭킹인데, JavaScript가 상위권에 위치하고 있으며 주목할 점은 작년보다 향상 중이라는 것이다.
+
+[https://octoverse.github.com/](https://octoverse.github.com/)
+
+[https://www.tiobe.com/tiobe-index/](https://www.tiobe.com/tiobe-index/)
+
+[https://pypl.github.io/PYPL.html](https://pypl.github.io/PYPL.html)
+
+이러한 긍정적인 지표들을 만든 핵심 역할을 한 것이 **Node.js**의 등장이다. **Ryan Dahl**에 의해 최초로 개발되었고, Inangural JSConf EU conference에서 세계에 알려졌다. 덕분에 브라우저에서만 동작하던 JavaScript가 브라우저 밖 Node 환경에서도 동작할 수 있게 됐다.
+
+<img src="{{'/public/img/node/node-1-3.png'}}">
+
+웹 브라우저(chrome)
+
+<img src="{{'/public/img/node/node-1-4.png'}}">
+
+windows 터미널에서 node 실행
+
+즉, python이나 java같은 프로그래밍 언어처럼 서버 사이드에서 동작하는 언어로 쓰일 수 있게 됐다.
 
 공식 사이트에서 소개하는 Node.js는 다음과 같다.
 
