--- a/_posts/Node/2021-02-14-Node-4.md
+++ b/_posts/Node/2021-02-14-Node-4.md
@@ -10,6 +10,12 @@ sitemap:
 
 ---
 
+<div class="intro" >
+
+의문점이나 지적 등의 관심 및 조언을 위한 댓글이나 메일은 언제나 환영이고 감사합니다.
+
+</div>
+
 <br>
 
 디렉토리 구조를 MVC 패턴에 맞게 구성하려 한다. 모델과 뷰는 나중에 하고, 먼저 url들을 여러 개의 Router들로 정리하고, url 구조를 쉽게 확인할 수 있게 routes.js에 모든 url들을 Router 별로 작성해 놓는다. 나누는 방법은 트리 구조처럼 뻗어 나가는 url 구조와 묶어낼 기능들을 상상해 보면 된다.
