--- a/_posts/Node/2021-02-14-Node-4.md
+++ b/_posts/Node/2021-02-14-Node-4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Node.js/Express Router & Controller 분리
-date: 2021-02-14 +0900
+title: Node.js/Express 미들웨어
+date: 2021-04-24 +0900
 categories: [Node.js]
 sitemap:
   changefreq: daily
@@ -17,228 +17,193 @@ sitemap:
 </div>
 
 <br>
-
-디렉토리 구조를 MVC 패턴에 맞게 구성하려 한다. 모델과 뷰는 나중에 하고, 먼저 url들을 여러 개의 Router들로 정리하고, url 구조를 쉽게 확인할 수 있게 routes.js에 모든 url들을 Router 별로 작성해 놓는다. 나누는 방법은 트리 구조처럼 뻗어 나가는 url 구조와 묶어낼 기능들을 상상해 보면 된다.
-
-예를 들어 `globalRouter` 에는 "/"로 시작하는 url들로 어디에 특별히 속하지 않는 url들을 관리하도록 한다.
-
-만약 "/users"라는 url은 "/"로 시작하지만, 유저의 디테일이나 정보 수정, 삭제 등의 기능을 처리할 url들이 추가될 수 있기 때문에 기능적으로 유저 관리에 묶어 `globalRouter`보단 `usersRouter`라는 별도의 Router로 작성해 주는게 좋다.
-
-Controller는 url에 상관없이 기능별로 정리하면 된다.
-
-참고로 MVC의 정의는 아래와 같다.
-
-> 모델-뷰-컨트롤러(Model–View–Controller, MVC)는 소프트웨어 공학에서 사용되는 소프트웨어 디자인 패턴
-
-[https://ko.wikipedia.org/wiki/모델-뷰-컨트롤러](https://ko.wikipedia.org/wiki/%EB%AA%A8%EB%8D%B8-%EB%B7%B0-%EC%BB%A8%ED%8A%B8%EB%A1%A4%EB%9F%AC)
-
+<div class="t-t-c text-shadow-blue"><h2>☄ About middleware</h2></div>
 <br>
 
-## 디렉토리 구조
+`미들웨어(middleware)`는 요청과 응답의 중간에 위치해 기능을 추가하거나, 원치 않는 요청을 걸러내는 등 매우 다양하다. 라우터나 에러 핸들러 또한 미들웨어의 일종이다. 사실 핸들러들 중 미들웨어와 컨트롤러 등을 구분하는 기준은 문법적인 것 보다는 의미적인 것이 크다.
 
 ```jsx
-/* 디렉토리 구조 
-|---controllers
-| |--- userController.js
-| |--- videoController.js
-|--- routers
-| |--- globalRouter.js
-| |--- userRouter.js
-| |--- videoRouter.js
-|---init.js
-|---app.js
-|--- routes.js
-*/
+const handleHome = (req, res) =>
+  res.send("This is the first home for Express.");
+
+app.get("/", handleHome);
+
+app.listen(PORT, () =>
+  console.log(`✅ Server listening on http://127.0.0.1:${PORT}/`)
+);
 ```
 
-<br>
-
-## routes.js
+예를 들어 위 `handleHome`은 `'/'` **경로로 오는 요청을 받아 응답하는 컨트롤러**다. 단, 모든 컨트롤러는 미들웨어가 될 수 있다. 미들웨어로 사용하는 함수는 매개변수를 `req`, `res` 외에 3번째로 `next`를 가진다. (첫 매개변수로 `err`을 추가하면 에러 처리 미들웨어로 사용할 수 있음. 그리고 **이 변수들의 변수 명은 전혀 상관이 없고 순서가 중요함**.)
 
 ```jsx
-// Global
-const HOME = "/";
-const JOIN = "/join";
-const LOGIN = "/login";
-const LOGOUT = "/logout";
-const SEARCH = "/search";
-
-// Users
-const USERS = "/users";
-const USER_DETAIL = "/:id";
-const EDIT_PROFILE = "/edit-profile";
-const CHANGE_PASSWORD = "/change-password";
-
-// Videos
-const VIDEOS = "/videos";
-const UPLOAD = "/upload";
-const VIDEO_DETAIL = "/:id";
-const EDIT_VIDEO = "/:id/edit";
-const DELETE_VIDEO = "/:id/delete";
-
-const routes = {
-  home: HOME,
-  join: JOIN,
-  login: LOGIN,
-  logout: LOGOUT,
-  search: SEARCH,
-  users: USERS,
-  userDetail: USER_DETAIL,
-  editProfile: EDIT_PROFILE,
-  changePassword: CHANGE_PASSWORD,
-  videos: VIDEOS,
-  upload: UPLOAD,
-  videoDetail: VIDEO_DETAIL,
-  editVideo: EDIT_VIDEO,
-  deleteVideo: DELETE_VIDEO,
+const logger = (req, res, next) => {
+  console.log(`${req.method} ${req.url}.`);
+  next();
 };
+const handleHome = (req, res) =>
+  res.send("This is the first home for Express.");
 
-export default routes;
+app.get("/", logger, handleHome);
 ```
 
-별도의 routes 파일을 만들어 url을 관리하면 url 구조들을 한 눈에 볼 수 있고, 특히 복잡한 url 구조들을 외울 필요가 없다는 점이다.
+- `req.method` : 요청된 http mothod
+- `req.url` : 요청된 url
 
-또한, 예를 들어 url에서 user의 id값에 따라 변경되는 부분은 `/:id`같이 작성하면 url parser가 알아서 파싱해준다. (대충 여기까지만 알고 더 자세히는 나중에)
-
-마지막으로 다른 파일에서 작성한 `routes`를 사용할 수 있도록 `export default routes;` 를 작성한다. `default`를 지정하면 파일 내의 모든 내용을 담아 **export**한다.
-
-<br>
-
-## controller
-
-```jsx
-// userController.js
-export const join = (req, res) => res.send("Join");
-export const login = (req, res) => res.send("Login");
-export const logout = (req, res) => res.send("Logout");
-export const userDetail = (req, res) => res.send("User detail");
-export const editProfile = (req, res) => res.send("Edit Profile");
-export const changePassword = (req, res) => res.send("Change password");
-```
-
-```jsx
-// videoController.js
-export const home = (req, res) => res.send("home");
-export const search = (req, res) => res.send("Search");
-export const upload = (req, res) => res.send("Upload");
-export const videoDetail = (req, res) => res.send("Video Detail");
-export const editVideo = (req, res) => res.send("Edit Video");
-export const deleteVideo = (req, res) => res.send("Delete Video");
-```
-
-router의 콜백 함수로 호출될 controller들을 이렇게 미리 작성해 둔 뒤 **export** & **import**로 가져다 쓴다.
-
-위에서 처럼 하나의 변수에 `export`를 하면 각각 `import` 할 수 있다. 방법은 import할 때 {}로 묶어줘야 한다.
-
-`import { home } from "../controllers/videoController";`
-
-두 개의 컨트롤러로 나눈 기준이 지금은 빠르게 임의대로 나눈 것이므로 추후에 바뀔 수 있다.
-
-<br>
-
-## router
-
-[https://expressjs.com/ko/guide/routing.html](https://expressjs.com/ko/guide/routing.html)
-
-**참고로 post 요청이 필요한 부분도 일단 get으로 처리해 줬다.**
-
-```jsx
-// globalRouter.js
-import express from "express";
-import routes from "../routes";
-import { home, search } from "../controllers/videoController";
-import { join, login, logout } from "../controllers/userController";
-
-export const globalRouter = express.Router();
-
-globalRouter.get(routes.home, home);
-globalRouter.get(routes.join, join);
-globalRouter.get(routes.login, login);
-globalRouter.get(routes.logout, logout);
-globalRouter.get(routes.search, search);
-```
-
-```jsx
-// userRouter.js
-import express from "express";
-import {
-  changePassword,
-  editProfile,
-  userDetail,
-} from "../controllers/userController";
-import routes from "../routes";
-
-export const userRouter = express.Router();
-
-userRouter.get(routes.userDetail, userDetail);
-userRouter.get(routes.editProfile, editProfile);
-userRouter.get(routes.changePassword, changePassword);
-```
-
-```jsx
-// videoRouter.js
-import express from "express";
-import {
-  deleteVideo,
-  editVideo,
-  upload,
-  videoDetail,
-} from "../controllers/videoController";
-import routes from "../routes";
-
-export const videoRouter = express.Router();
-
-videoRouter.get(routes.upload, upload);
-videoRouter.get(routes.videoDetail, videoDetail);
-videoRouter.get(routes.editVideo, editVideo);
-videoRouter.get(routes.deleteVideo, deleteVideo);
-```
-
-<br>
-
-## app
-
-```jsx
-// app.js
-import express from "express";
-import helmet from "helmet";
-import morgan from "morgan";
-import cookieParser from "cookie-parser";
-import bodyParser from "body-parser";
-import routes from "./routes";
-import { globalRouter } from "./routers/globalRouter";
-import { userRouter } from "./routers/userRouter";
-import { videoRouter } from "./routers/videoRouter";
-
-const app = express();
-
-function handleHome(req, res) {
-  res.send("Welcome to my home");
-}
-
-app.use(cookieParser());
-app.use(bodyParser.json());
-app.use(bodyParser.urlencoded({ extended: true }));
-app.use(helmet());
-app.use(morgan("dev"));
-
-app.use(routes.home, globalRouter);
-app.use(routes.users, userRouter);
-app.use(routes.videos, videoRouter);
-
-export default app;
-```
-
-이제 힘들게 routets를 작성하고, router들을 분리한 이유를 찾을 수 있는데,
-
-`app.use(routes.users, userRouter);` 를 보면 `routes.users = '/users'`가 되고, `userRouter`에서 처리한 요청들을 모두 매핑시켜 준다.
-
-따라서 "/users/1"의 url로 요청을 보내도 알아서 `routes.users` + `routes.userDetail`로 url을 매핑시켜 `userRouter`의 `userRouter.get(routes.userDetail, userDetail);`를 호출해 응답할 수 있도록 한다.
+미들웨어를 콜백으로 등록하는 방법은 `get`의 **두 번째 인자부터** 차례대로 입력해 주면 된다. 사실 `Application.get()` 메소드는 인자 값으로 여러 개의 핸들러를 가질 수 있다.
 
 <img src="{{'/public/img/node/node-4-1.png'}}">
+
+그럼 여러 개의 핸들러를 알아서 `get` 함수가 실행시켜 주는가? 완전히 그렇지는 않다. 먼저 가장 첫 번째 핸들러(두 번째 인자 값)를 콜백으로 호출시킨다. 그럼 호출된 핸들러에서 여러 로직을 처리한 다음 두 번째 핸들러(위 에서는 `handleHome` 컨트롤러)를 호출하기 위해서는 미들웨어의 3번 째 인수인 `next`를 사용해 `next()`와 같이 호출한다.
+
+중요한 것은 순서다. 각 미들웨어의 목적에 맞게 **요청을 받아 응답 처리를 하는 핸들러(컨트롤러) 전에 호출**되야 하므로 그 앞에 넣어준다. 단, 미들웨어가 목적 상 로직을 처리한 다음 응답까지 하기도 한다.
+
+위 예제에서는 `/`로 접속하면, `get` → `logger`→ `handleHome` 순서로 처리된다.
+
+`handleHome` 컨트롤러에 `next`를 추가할 수 있지만 역할 상 마지막에 호출되기 때문에 필요 없다.
+
+미들웨어는 보통 global 영역으로 사용하기 위해 `app.use()`와 함께 사용된다.
+
+다시 한 번 강조하자면 이 미들웨어를 사용할 때는 순서가 매우 중요하다. 일반적으로 위에서 아래로 한 줄씩 실행되는 자바스크립트의 특성을 그대로 이어 받아 `app.use()`가 선언된 위치에 따라 실행 되고, 안되고가 결정될 수 있다.
+
+```jsx
+app.use((req, res, next) => {
+  console.log("global middleware");
+  next();
+});
+
+app.get("/", (req, res) => res.send("Home")); // global middleware 로그가 찍힘
+app.get("/login", (req, res) => res.send("Login")); // global middleware 로그가 찍힘
+```
+
+```jsx
+app.get("/", (req, res) => res.send("Home")); // global middleware 로그가 안 찍힘
+app.use((req, res, next) => {
+  console.log("global middleware");
+  next();
+});
+app.get("/login", (req, res) => res.send("Login")); // global middleware 로그가 찍힘
+```
+
+특정 url 요청에만 실행되는 미들웨어를 사용하고 싶으면 첫 번째 인자에 url을 지정해 주면 된다.
+
+```jsx
+app.use("/", (req, res, next) => {
+  console.log("global middleware");
+  next();
+});
+
+app.get("/", (req, res) => res.send("Home")); // global middleware 로그가 찍힘
+app.get("/login", (req, res) => res.send("Login")); // global middleware 로그가 안 찍힘
+```
+
+여기서 주의해야 할 점은 `next()`를 해주지 않으면 다음 함수를 호출하지 않으므로 응답을 보내지 못해 일종의 block 상태가 된다. 예를 들어 위 코드에서 `next()`를 생략하면 `/`요청에 `res.send("Home")`응답을 보내지 못해 빈 화면에서 로딩 중이 반복된다.
+
+이를 활용해 간단하게 로깅을 확인할 `logger`와 특정 url 접속을 차단하는 `privateMiddleware`를 만들어 볼 수 있다.
+
+```jsx
+const logger = (req, res, next) => {
+  console.log(`${req.method} ${req.url}.`);
+  next();
+};
+const privateMiddleware = (req, res, next) => {
+  const url = req.url;
+  if (url === "/protected") {
+    console.log("🚨 Someone tried to connect to private lounge.");
+    res.send("<h1>Not Allowed</h1>");
+  }
+  next();
+};
+
+const handleHome = (req, res) =>
+  res.send("This is the first home for Express.");
+const handleProtected = (req, res) =>
+  res.send("Welcome to the private lounge.");
+
+app.use(logger);
+app.use("protected", privateMiddleware);
+app.get("/", handleHome);
+app.get("protected", handleProtected);
+```
+
+- `/`로 접속 시도 시,
+
+<img src="{{'/public/img/node/node-4-2.png'}}">
+
+`logger` → `handlehome`
+
+- `/protected`로 접속 시도 시,
+
+<img src="{{'/public/img/node/node-4-3.png'}}">
+
+`logger` → `privateMiddleware` (`handleProtected`는 호출되지 않음)
+
+<br>
+<div class="t-t-c text-shadow-blue"><h2>☄ 자주 사용하는 미들웨어</h2></div>
+<br>
+
+npm에는 훌륭한 미들웨어들이 많기 때문에 적극적으로 이용하는 것이 좋다.
+
+### morgan
+
+node.js용 **HTTP 요청 로거 미들웨어**로 위에서 만든 `logger`보다 다양하고 정교한 기능들을 가지고 있어 로깅을 위한 미들웨어로 많이 사용된다.
+
+다양한 옵션이 있으므로 문서에서 참고
+
+[http://expressjs.com/en/resources/middleware/morgan.html](http://expressjs.com/en/resources/middleware/morgan.html)
+
+- `npm install morgan`
+
+```jsx
+// ...
+import morgan from "morgan";
+
+// ...
+
+const logger = morgan("dev"); // 5가지 옵션 중 dev 사용
+
+const handleHome = (req, res) =>
+  res.send("This is the first home for Express.");
+
+app.use(logger);
+app.get("/", handleHome);
+
+// ...
+```
+
+<img src="{{'/public/img/node/node-4-4.png'}}">
+
+순서대로 **HTTP method**, **route**, **status code**, **응답시간**
+
+이 외에도 앞으로 사용할 미들웨어들을 간단히 소개만 해 보면,
+
+### body-parser
+
+`body` 요청의 구문 분석, 특히 사용자의 입력 파싱에 도움을 줌.
+
+[http://expressjs.com/en/resources/middleware/body-parser.html](http://expressjs.com/en/resources/middleware/body-parser.html)
+
+- `npm install body-parser`
+
+### Cookie-parser
+
+쿠키 헤더를 구문 분석하고 쿠키 이름으로 키 지정된 개체로 req.cookie를 채움
+
+[http://expressjs.com/en/resources/middleware/cookie-parser.html](http://expressjs.com/en/resources/middleware/cookie-parser.html)
+
+- `npm install cookie-parser`
+
+### helmet
+
+다양한 보안 관련 미들웨어
+
+[https://www.npmjs.com/package/helmet](https://www.npmjs.com/package/helmet)
+
+- `npm install helmet`
 
 <br>
 
 ### Reference
+
+Node.js 교과서(2판) - 조현영
 
 [https://nomadcoders.co/wetube](https://nomadcoders.co/wetube)
