--- a/_posts/Node/2021-05-04-Node-6.md
+++ b/_posts/Node/2021-05-04-Node-6.md
@@ -122,7 +122,7 @@ input(type='checkbox' checked)
 │ │ ├──userRouter.js
 │ │ └──videoRouter.js
 │ └─┬views   <--------------추가
-│   └──home.js 
+│   └──home.pug 
 ├──server.js
 └──pakage.json
 */
