--- a/_posts/Node/2021-05-05-Node-7.md
+++ b/_posts/Node/2021-05-05-Node-7.md
@@ -38,10 +38,10 @@ views를 만들다 보면 `head`나 `footer`등과 같은 layout, 또는 필수 
 │ │ └──videoRouter.js
 │ └─┬views   <---------------------
 │   ├─┬partial
-│   │ └──footer.js
-│   ├──base.js
-│   ├──home.js
-│   └──watch.js
+│   │ └──footer.pug
+│   ├──base.pug
+│   ├──home.pug
+│   └──watch.pug
 ├──server.js
 └──pakage.json
 ```
