--- a/_posts/Git/2021-01-16-Git-1.md
+++ b/_posts/Git/2021-01-16-Git-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 유용한 Git 명령어 정리(필요할 때마다 추가)
+title: Git 유용한 명령어 정리(필요할 때마다 추가)
 date: 2021-01-16 +0900
 categories: Git
 sitemap:
@@ -27,6 +27,8 @@ $ git clone <저장소 url> [<directory>]
 
 - `git init`: 현재 디렉토리에서 버전 관리 시작 → .git 디렉토리 생성
 - `git clone <저장소 url> [<directory>]`: 현재 디렉토리에 .git 디렉토리를 생성(버전 관리 시작) 후 저장소 내용 복제. `directory`를 기입해 주면 현재 디렉토리가 아닌 기입한 디렉토리에 복제
+
+_로컬 저장소의 git 히스토리를 삭제하고 싶을 때는(버전관리를 다시 시작하고 싶을 때) 모든 정보가 저장되어 있는 **.git** 파일을 삭제해 주면 된다._
 
 ### 🔹 git config
 
@@ -178,8 +180,8 @@ $ git log <branch>..<branch>
 
 - `git log`: 현재 commit된 로그들 확인
 - `git log -p`: 모든 commit들의 변경사항을 이전 commit과 비교하며 확인
-- `git log --branches --decorate --graph`: branch들의 commit 상태를 보기 쉽게 나타내 줌
-- `git log --branches --decorate --graph --online`: Author와 Date 등을 생략해 보다 간략하게
+- `git log --branches --decorate --pretty --graph`: branch들의 commit 상태를 보기 쉽게 나타내 줌
+- `git log --branches --decorate --pretty --graph --oneline`: Author와 Date 등을 생략해 보다 간략하게
 - `git log <branch>..<branch>`: 두 branch의 차이점
 
 <br>
