--- a/_posts/Node/2021-05-09-Node-9.md
+++ b/_posts/Node/2021-05-09-Node-9.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Node.js/Express MongoDB/Mongoose
+title: Node.js/Express MongoDB(몽고디비)/Mongoose(몽구스)
 date: 2021-05-09 +0900
 categories: [Node.js]
 sitemap:
