--- a/_posts/Node/2021-05-11-Node-10.md
+++ b/_posts/Node/2021-05-11-Node-10.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Node.js/Express Mongoose-CRUD-1
+title: Node.js/Express Mongoose(몽구스)-CRUD-1
 date: 2021-05-11 +0900
 categories: [Node.js]
 sitemap:
