--- a/_posts/Node/2021-05-11-Node-10.md
+++ b/_posts/Node/2021-05-11-Node-10.md
@@ -154,7 +154,7 @@ app.listen(PORT, () =>
 ```
 
 <br>
-<div class="t-t-c text-shadow-blue"><h2>## ☄ Mongoose Queries</h2></div>
+<div class="t-t-c text-shadow-blue"><h2>☄ Mongoose Queries</h2></div>
 <br>
 
 ---
