--- a/_posts/Node/2021-05-16-Node-11.md
+++ b/_posts/Node/2021-05-16-Node-11.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Node.js/Express Mongoose(몽구스)-CRUD-2
+title: Node.js/Express Mongoose(몽구스)-CRUD-Create
 date: 2021-05-16 +0900
 categories: [Node.js]
 sitemap:
