--- a/_posts/Node/2021-05-25-Node-12.md
+++ b/_posts/Node/2021-05-25-Node-12.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Node.js/Express Mongoose(몽구스)-CRUD-Detail/Update
+title: Node.js/Express Mongoose(몽구스)-CRUD-Detail/Update/Delete
 date: 2021-05-25 +0900
 categories: [Node.js]
 sitemap:
@@ -86,7 +86,7 @@ return res.render("watch", { pageTitle: video.title, video });
 ```
 
 <br>
-<div class="t-t-c text-shadow-blue"><h2>☄ Video Edit</h2></div>
+<div class="t-t-c text-shadow-blue"><h2>☄ Edit Video</h2></div>
 <br>
 
 ---
@@ -210,9 +210,37 @@ export const postEdit = async (req, res) => {
 다양한 필터 조건을 편라하게 `Object`로 구성해 `document` 객체 존재 여부를 알 수 있다.
 
 <br>
+<div class="t-t-c text-shadow-blue"><h2>☄ Delete Video</h2></div>
+<br>
+
+---
+
+비디오를 삭제하는 쿼리 함수는 매우 간단하다. `findOneAndDelete()` 함수나 `id`를 이용해 더 간단하게 줄인 `findByIdAndDelete()`를 사용하면 된다.
+
+```jsx
+// controllers/videoController.js
+
+// ... 생략
+
+export const deleteVideo = async (req, res) => {
+  const { id } = req.params;
+  await Video.findByIdAndDelete(id);
+  return res.redirect("/");
+};
+```
+
+사실 데이터를 삭제하는 쿼리 함수는 `findOneAndDelete()` 외에 `remove()`가 하나 더 있다(있었다). 그런데 이제 거의 모든 경우에 `findOneAndDelete()`를 사용하도록 대체됐다.
+
+`findOneAndDelete()`에 대한 [몽구스 docs](https://mongoosejs.com/docs/api.html#model_Model.findOneAndDelete) 설명
+
+> This function differs slightly from `Model.findOneAndRemove()` in that `findOneAndRemove()` becomes a MongoDB `findAndModify()` command, as opposed to a `findOneAndDelete()` command. For most mongoose use cases, this distinction is purely pedantic. You should use `findOneAndDelete()` unless you have a good reason not to.
+
+<br>
 
 ### Reference
 
 [https://nomadcoders.co/wetube](https://nomadcoders.co/wetube)
 
 [https://mongoosejs.com/docs/api/model.html](https://mongoosejs.com/docs/api/model.html)
+
+[https://mongoosejs.com/docs/api.html#model_Model.findOneAndDelete](https://mongoosejs.com/docs/api.html#model_Model.findOneAndDelete)
